test/tests/errors/error-for-step-not-int2.sm
// true
// false
/**/
/**/

program {
    var x = 0;
    for (x = 0 step false until 10) {}
}